# tech-toolkit

./: .editorconfig  .gitignore  README.md  jest.config.ts  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pom.xml  postcss.config.mjs
.github/workflows/: s2u2m-resource-service-starter.yml  s2u2m-service-parent.yml
api/: axios-client.ts  base-query.ts  index.ts
api/auth/: index.ts  mock.ts
api/interceptors/: request-token-interceptor.ts
api/mocks/: handlers.ts  index.ts
app/: global-layout.module.css  global-layout.tsx  globals.css  globals.scss  layout.tsx
fastapi-nextjs/: .gitignore  README.md  package-lock.json
middlewares/: auth.middleware.ts
quick-starter/be-fastapi-sqlite/: .env.example  alembic.ini  be-deploy.sh  docker-entrypoint.sh  pyproject.toml
quick-starter/be-fastapi-sqlite/alembic/versions/: 726ef114da2e_seed_preset_users.py
quick-starter/be-fastapi-sqlite/src/: main.py
quick-starter/be-fastapi-sqlite/src/api/: auth.py  dependencies.py  users.py
quick-starter/be-fastapi-sqlite/src/core/: database.py  security.py
quick-starter/be-fastapi-sqlite/src/models/: __init__.py
quick-starter/be-fastapi-sqlite/src/services/: auth.py
quick-starter/be-fastapi-sqlite/tests/api/: test_auth.py
s2u2m-resource-service-starter/: pom.xml
s2u2m-service-starter-parent/: pom.xml
sb3-jdk17/: .gitignore  README.md
server/: api-handler-wrapper.ts
service-example-h2/: pom.xml
store/: axios-client.ts  base-query.ts  bearer-token-utils.ts  index.ts
web-example-nextjs-ts-rtk/: .env  package.json
(+201 files in other folders)
